--- a/src/ZectranetBundle/Resources/views/project.html.twig
+++ b/src/ZectranetBundle/Resources/views/project.html.twig
@@ -4,6 +4,17 @@
 
 {% block body %}
     <div ng-controller="ProjectController" ng-init="getEpicStories({{ project.id }})">
+        <div class="row">
+            <ol class="breadcrumb" style="margin: 0 -30px;">
+                <li>
+                    <a href="{{ path('zectranet_user_home') }}">Summary</a>
+                </li>
+                <li class="active">
+                    {{ project.name }}
+                </li>
+            </ol>
+        </div>
+
         <div class="page-header">
             <i class="fa fa-briefcase fa-2x"></i>
             <span style="font-size: 25px;">{{ project.name }}</span>
