--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -425,6 +425,7 @@
             officeShow: "{{ url('zectranet_show_office', {office_id: 0}) }}",
 			projectShow: "{{ url('zectranet_show_project', {project_id: 0}) }}",
 			taskShow: "{{ url('zectranet_task_show', {task_id: 0}) }}",
+			documentTemplate: "{{ asset('bundles/zectranet/templates/document.html') }}",
             {#checkUserByUsername: "{{ url('intranet_user_check_username') }}",
             registrationAction : "{{ url('intranet_register_action') }}",
             checkUsername: "{{ url('intranet_user_check_username') }}",
