--- a/src/ZectranetBundle/Resources/views/projectAddEpicStory.html.twig
+++ b/src/ZectranetBundle/Resources/views/projectAddEpicStory.html.twig
@@ -10,7 +10,7 @@
             </div>
             <div class="modal-body">
                 <div class="row">
-                    <div class="col-md-offset-1 col-md-10">
+                    <div class="col-md-offset-1 col-md-10 col-xs-offset-1 col-xs-10">
                         <form class="form-horizontal">
                             <div class="form-group">
                                 <label for="add_epic_story_name">Epic Story Name:</label>
