--- a/src/ZectranetBundle/Resources/views/projectSettings.html.twig
+++ b/src/ZectranetBundle/Resources/views/projectSettings.html.twig
@@ -3,9 +3,9 @@
 {% block title %}{{ project.name }} Settings{% endblock %}
 
 {% block body %}
-    <div ng-controller="ProjectController" ng-init="getMembers(); getOffices();">
+    <div ng-controller="ProjectController" ng-init="getMembers(); getOffices(); getEpicStories({{ project.id }});">
         <div class="row">
-            <ol class="breadcrumb" style="margin: 0 -30px;">
+            <ol class="breadcrumb" style="margin: 0 -15px;">
                 <li>
                     <a href="{{ path('zectranet_user_home') }}">Summary</a>
                 </li>
@@ -30,6 +30,11 @@
                     <li>
                         <a href="#offices-manage" data-toggle="tab" class="btn">
                             Offices Manage
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#epic-stories-manage" data-toggle="tab" class="btn">
+                            Epic Stories Manage
                         </a>
                     </li>
                 </ul>
@@ -86,12 +91,12 @@
                         </div>
                     </div>
                     <!-- End of Users Manage Panel -->
-
+                    
                     <!-- Begin of Offices Manage Panel -->
                     <div id="offices-manage" style="margin-top: 25px;" class="tab-pane fade">
                         <div class="col-md-12">
                             <div class="row">
-                                <div class="col-md-6" cg-busy="officesPromise">
+                                <div class="col-md-6" cg-busy="promiseProject">
                                     <div class="list-group">
                                         <div class="list-group-item active">
                                             <i class="fa fa-home"></i>
@@ -103,6 +108,9 @@
                                                 <i class="fa fa-home"></i>
                                                 [[ office.name ]]
                                             </a>
+                                            <div class="list-group-item" ng-if="offices.length == 0">
+                                                <h4 class="text-center text-info">No available offices to show</h4>
+                                            </div>
                                         </div>
                                         <div class="form-group">
                                             <button type="button" ng-click="addOfficesToProject()" class="form-control btn btn-default btn-success">
@@ -113,7 +121,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-md-6" cg-busy="officesPromise">
+                                <div class="col-md-6" cg-busy="promiseProject">
                                     <div class="list-group">
                                         <div class="list-group-item active">
                                             <i class="fa fa-home"></i>
@@ -125,6 +133,9 @@
                                                 <i class="fa fa-home"></i>
                                                 [[ office.name ]]
                                             </a>
+                                            <div class="list-group-item" ng-if="projectOffices.length == 0">
+                                                <h4 class="text-center text-info">Project Offices will be displayed here</h4>
+                                            </div>
                                         </div>
                                         <div class="form-group">
                                             <button type="button" class="form-control btn btn-default btn-danger" ng-click="removeOfficesFromProject()">
@@ -138,10 +149,52 @@
                         </div>
                     </div>
                     <!-- End of Offices Manage Panel -->
+
+                    <!-- Begin of Epic Stories Manage Panel -->
+                    <div id="epic-stories-manage" style="margin-top: 25px;" class="tab-pane fade">
+                        <div class="col-md-12">
+                            <div class="row">
+                                <div class="col-md-offset-2 col-md-8 col-xs-12" cg-busy="promiseProject">
+                                    <div class="list-group">
+                                        <div class="list-group-item active">
+                                            <i class="fa fa-home"></i>
+                                            Epic Stories
+                                        </div>
+                                        <div class="list-group-item" style="height: 250px; max-height: 250px; overflow-y: auto;" ng-cloak>
+                                            <a style="cursor: pointer;" class="list-group-item" ng-repeat="epicStory in epicStories" ng-init="epicStory.selected = false;"
+                                               ng-class="{ 'active': epicStory.selected }" ng-click="epicStory.selected = !epicStory.selected">
+                                                <i class="fa fa-home"></i>
+                                                [[ epicStory.name ]]
+                                            </a>
+                                        </div>
+                                        <div class="form-group">
+                                            <button type="button" data-toggle="modal" data-target="#add_epic_story" class="form-control btn btn-default btn-success">
+                                                <i class="fa fa-plus-circle"></i>
+                                                Add New Epic Story
+                                            </button>
+                                            <button type="button" data-toggle="modal" data-target="#delete_project_epic_story" class="form-control btn btn-default btn-danger">
+                                                <i class="fa fa-trash"></i>
+                                                Delete Selected Epic Stories
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End of Epic Stories Manage Panel -->
                 </div>
             </div>
         </div>
+        <!-- BEGIN OF EPIC STORY ADD MODAL -->
+        {% include '@Zectranet/projectAddEpicStory.html.twig' %}
+        <!-- END OF EPIC STORY ADD MODAL -->
+
+        <!-- BEGIN OF EPIC STORY DELETE MODAL -->
+        {% include '@Zectranet/projectDeleteEpicStory.html.twig' %}
+        <!-- END OF EPIC STORY DELETE MODAL -->
     </div>
+
 {% endblock %}
 
 {% block javascripts %}
@@ -151,7 +204,11 @@
         JSON_URLS.getMembers = "{{ path('zectranet_get_project_members', { 'project_id': project.id }) }}";
         JSON_URLS.saveMembers = "{{ path('zectranet_save_project_members', { 'project_id': project.id }) }}";
         JSON_URLS.getOffices = "{{ path('zectranet_get_project_offices', { 'project_id': project.id }) }}";
-        JSON_URLS.saveOffices = "";
+        JSON_URLS.addOffices = "{{ path('zectranet_project_add_offices', {'project_id': project.id}) }}";
+        JSON_URLS.removeOffices = "{{ path('zectranet_project_remove_offices', {'project_id': project.id}) }}";
+        JSON_URLS.getEpicStories = "{{ path('zectranet_project_get_epic_stories', { 'project_id': project.id }) }}";
+        JSON_URLS.addEpicStory = "{{ path('zectranet_project_add_epic_story', { 'project_id': project.id }) }}";
+        JSON_URLS.deleteEpicStories = "{{ path('zectranet_project_delete_epic_stories', { 'project_id': project.id }) }}";
 
         $('#project-manage-tabs a').click(function (e) {
             e.preventDefault();
