--- a/src/ZectranetBundle/Resources/views/office.html.twig
+++ b/src/ZectranetBundle/Resources/views/office.html.twig
@@ -16,21 +16,23 @@
     </div>
 
     <div class="page-header">
-        {% if office.owner.id == app.user.id %}
-            <i class="fa fa-home fa-2x"></i>
-        {% else %}
-            <i class="fa fa-sitemap fa-2x"></i>
-        {% endif %}
+        <i class="fa fa-home fa-2x"></i>
         <span style="font-size: 25px;">{{ office.name }}</span>
         <!-- Begin of Office controll buttons -->
         {% if (office.owner.id == app.user.id) or (is_granted('ROLE_ADMIN')) %}
-            <a href="#" style="text-decoration: none;">
-                <i class="fa fa-fw fa-gear" style="font-size: 20px;"></i>
-            </a>
+            <div class="pull-right">
+                <div class="pull-right" data-toggle="tooltip" data-placement="top" title="Delete This Office">
+                    <a style="cursor: pointer; text-decoration: none;" data-toggle="modal" data-target="#delete_private_office">
+                        <i class="fa text-danger fa-fw fa-trash  fa-2x"></i>
+                    </a>
+                </div>
 
-            <a href="#" style="text-decoration: none;" data-toggle="modal" data-target="#delete_private_office">
-                <i class="fa fa-fw fa-trash" style="color: red; font-size: 20px;"></i>
-            </a>
+                <div class="pull-right" data-toggle="tooltip" data-placement="top" title="Office Settings">
+                    <a style="cursor: pointer; text-decoration: none;" href="{{ path('zectranet_settings_office', { 'office_id': office.id }) }}">
+                        <i class="fa text-primary fa-fw fa-gear fa-2x"></i>
+                    </a>
+                </div>
+            </div>
         {% endif %}
         <!-- End of Office controll buttons -->
     </div>
