--- a/web/bundles/zectranet/templates/task-table.html
+++ b/web/bundles/zectranet/templates/task-table.html
@@ -3,19 +3,20 @@
 </div>
 <table ng-if="(tasks) && (tasks.length > 0)" class="table">
     <thead>
-    <tr>
-        <th class="col-xs-1">ID</th>
-        <th class="col-xs-2">Name</th>
-        <th class="col-xs-1 hidden-sm hidden-xs">Priority</th>
-        <th class="col-xs-1 hidden-xs">Status</th>
-        <th class="col-xs-1 hidden-xs">Progress</th>
-        <th class="col-xs-1 hidden-sm hidden-xs">Estimated</th>
-        <th class="col-xs-1 hidden-sm hidden-xs">Start Date</th>
-        <th class="col-xs-1 hidden-sm hidden-xs">End Date</th>
-        <th class="col-xs-1 hidden-sm hidden-xs">Owner</th>
-        <th class="col-xs-1 hidden-xs">Assigned</th>
-        <th class="col-xs-1">Operations</th>
-    </tr>
+        <tr>
+            <th class="col-xs-1">ID</th>
+            <th class="col-xs-1">Name</th>
+            <th class="col-xs-1 hidden-sm hidden-xs">Priority</th>
+            <th class="col-xs-1 hidden-sm hidden-xs">Status</th>
+            <th class="col-xs-1 hidden-xs">Progress</th>
+            <th class="col-xs-1 hidden-sm hidden-xs">Estimated</th>
+            <th class="col-xs-1 hidden-sm hidden-xs">Start Date</th>
+            <th class="col-xs-1 hidden-sm hidden-xs">End Date</th>
+            <th class="col-xs-1 hidden-sm hidden-xs">Owner</th>
+            <th class="col-xs-1 hidden-sm hidden-xs">Assigned</th>
+            <th class="col-xs-1 hidden-xs">Sprint</th>
+            <th class="col-xs-1">Operations</th>
+        </tr>
     </thead>
 
     <tbody ng-repeat="task in tasks" ng-init="task.expand = false; parentTask = task">
@@ -46,6 +47,15 @@
                 [[ task.assigned.name ]]
             </span>
         </td>
+        <td class="col-xs-1 hidden-xs">
+            <div ng-if="task.sprint">
+                <a ng-init="task.sprint.href = assignSprintHref(task.sprint.officeid, task.sprint.id)"
+                   ng-href="[[task.sprint.href]]">
+                    [[task.sprint.name]]
+                </a>
+            </div>
+            <div ng-if="!task.sprint">-</div>
+        </td>
         <td class="col-xs-1">
             <a class="btn btn-primary btn-xs" data-toggle="modal" data-target="#add_new_subtask"
                ng-click="addParentIdToSubTask(task.id)" style="width: 22px; height: 22px; cursor: pointer;">
@@ -56,7 +66,7 @@
                 <i class="fa fa-trash"></i>
             </a>
             <a class="btn btn-default btn-xs" data-toggle="modal" data-target="#add_task_to_sprint"
-               ng-click="" style="width: 22px; height: 22px; cursor: pointer;">
+               ng-click="taskModel.id = task.id" style="width: 22px; height: 22px; cursor: pointer;">
                 <i class="fa fa-stack-overflow"></i>
             </a>
         </td>
